# akshare_web

./: .editorconfig  .env.example  .env.production  .gitignore  .pre-commit-config.yaml  API.md  ARCHITECTURE.md  CODE_QUALITY.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  Dockerfile  Makefile  QUICKSTART.md  README.md  akshare_web.service  alembic.ini  bandit.yaml  dev_start.sh  docker-compose.yml  init.sql  logging_config.ini  nginx.conf  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  restart_app.sh  start_app.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
_bmad/_config/: agent-manifest.csv  bmad-help.csv  files-manifest.csv  manifest.yaml  workflow-manifest.csv
_bmad/_config/ides/: claude-code.yaml  codex.yaml  cursor.yaml  windsurf.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/gds/: config.yaml
_bmad/tea/: config.yaml
_bmad/wds/: config.yaml
akshare/: __init__.py
akshare/bond/: bond_convert.py  bond_zh_cov.py
akshare/fund/: fund_em.py  fund_etf_em.py  fund_rating.py
akshare/futures/: futures_hist_em.py  futures_hq_sina.py  futures_inventory_99.py  futures_inventory_em.py  futures_inventory_em_varieties.py  futures_to_spot.py  futures_warehouse_receipt.py  futures_zh_sina.py
akshare/futures_derivative/: futures_contract_info_dce.py  futures_contract_info_gfex.py
akshare/option/: option_commodity.py  option_em.py  option_finance_sina.py
akshare/stock/: stock_cg_equity_mortgage.py  stock_fund_em.py  stock_hk_sina.py  stock_hold_control_em.py  stock_info.py  stock_intraday_em.py  stock_repurchase_em.py  stock_share_hold.py  stock_zh_ah_tx.py  stock_zh_b_sina.py  stock_zh_comparison_em.py
akshare/stock_feature/: stock_board_industry_ths.py  stock_esg_sina.py  stock_gdfx_em.py  stock_gdzjc_em.py  stock_hist_em.py  stock_hist_tx.py  stock_jgdy_em.py  stock_lhb_sina.py  stock_qsjy_em.py  stock_report_em.py  stock_sns_sseinfo.py  stock_technology_ths.py  stock_three_report_em.py  stock_zh_vote_baidu.py
akshare/stock_fundamental/: stock_notice.py
akshare/utils/: func.py
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial.py  002_add_data_scripts_table.py  003_add_indexes.py  004_add_password_changed_at.py
app/: __init__.py  cli.py  main.py
app/api/: __init__.py  auth.py  data.py  dependencies.py  executions.py  interfaces.py  metrics.py  rate_limit.py  schemas.py  scripts.py  settings.py  tables.py  tasks.py  users.py  websocket.py
app/core/: __init__.py  config.py  database.py  security.py  token_blacklist.py
app/data_fetch/: __init__.py
app/data_fetch/configs/: __init__.py
app/data_fetch/providers/: __init__.py  akshare_provider.py
app/data_fetch/scripts/: __init__.py
app/data_fetch/scripts/bonds/: __init__.py
app/data_fetch/scripts/common/: __init__.py
app/data_fetch/scripts/cryptos/: __init__.py
app/data_fetch/scripts/currencies/: __init__.py
app/data_fetch/scripts/forexs/: __init__.py
app/data_fetch/scripts/funds/: __init__.py
app/data_fetch/scripts/futures/: __init__.py
app/data_fetch/scripts/indexs/: __init__.py
app/data_fetch/scripts/options/: __init__.py
app/data_fetch/scripts/stocks/: __init__.py
app/data_fetch/utils/: __init__.py  retry.py
app/middleware/: request_logging.py  security.py
app/models/: __init__.py  data_script.py  data_table.py  interface.py  task.py  user.py
app/services/: __init__.py  data_acquisition.py  data_service.py  execution_service.py  interface_loader.py  notification_service.py  retry_service.py  scheduler.py  scheduler_service.py  script_service.py
app/utils/: __init__.py  cache.py  constants.py  db_result.py  helpers.py  serialization.py  validators.py
frontend/: .eslintrc.cjs  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/coverage/: index.html
frontend/coverage/src/: App.vue.html  index.html
frontend/e2e/: auth.spec.ts  scripts.spec.ts  tasks.spec.ts
frontend/public/: manifest.json
frontend/scripts/: generate-api-types.js
frontend/src/: App.vue  components.d.ts  main.ts
frontend/src/api/: auth.ts  data.ts  scripts.ts  settings.ts  tables.ts  tasks.ts  users.ts
frontend/src/composables/: index.ts  useApiCall.ts  useAsync.ts  useLoading.ts  useNotification.ts  usePagination.ts  usePerformance.ts  useSearch.ts  useStoreAction.ts
frontend/src/config/: constants.ts
frontend/src/i18n/: index.ts
frontend/src/mocks/: browser.ts  handlers.ts  node.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  executions.ts  helpers.ts  index.ts  tables.ts  tasks.ts  theme.ts
frontend/src/styles/: theme.css
frontend/src/types/: api.d.ts  index.ts
frontend/src/utils/: error.ts  logger.ts  request.ts  websocket.ts
frontend/src/views/: ExecutionsView.vue  HomeView.vue  LayoutView.vue  LoginView.vue  NotFoundView.vue  RegisterView.vue  ScriptDetailView.vue  ScriptsView.vue  SettingsView.vue  TableDetailView.vue  TablesView.vue  TasksView.vue  UsersView.vue
scripts/: init_tasks_and_tables.py
tests/: __init__.py  conftest.py  test-summary.md  test_akshare_provider.py  test_akshare_provider_direct.py  test_api.py  test_api_auth_full.py  test_api_data_full.py  test_api_dependencies.py  test_api_endpoints.py  test_api_executions_full.py  test_api_interfaces_full.py  test_api_schemas.py  test_api_scripts_full.py  test_api_settings_full.py  test_api_tables_full.py  test_api_tables_lifecycle.py  test_api_tasks_full.py  test_api_tasks_lifecycle.py  test_api_users_full.py  test_async_retry_coverage.py  test_auth.py  test_auth_direct.py  test_cli.py  test_cli_coverage.py  test_cli_direct.py  test_cli_extended.py  test_config.py  test_core.py  test_data_acquisition.py  test_data_acquisition_coverage.py  test_data_acquisition_details.py  test_data_acquisition_direct.py  test_data_acquisition_full.py  test_data_direct.py  test_data_service.py  test_database.py  test_database_coverage.py  test_database_extended.py  test_database_functions.py  (+45 more)
(+88 files in other folders)
