[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "akshare"
version = "1.17.91"
description = "AKShare is an elegant and simple financial data interface library for Python"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AKFamily", email = "albertandking@gmail.com"}
]
maintainers = [
    {name = "cloud", email = "cloud@example.com"}
]
keywords = ["akshare", "financial data", "quantitative trading", "stock", "fund", "futures"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.3",
    "numpy>=2.1.3",
    "html5lib>=1.1",
    "jsonpath>=0.82",
    "tqdm>=4.66.0",
    "tabulate>=0.9.0",
    "scipy>=1.13.0",
    "decorator>=5.1.1",
    "mini-racer>=0.6.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.35",
    "alembic>=1.14.0",
    "pymysql>=1.1.1",
    "cryptography>=44.0.0",
    "PyJWT>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.17",
    "apscheduler>=3.10.4",
    "croniter>=3.0.3",
    "httpx>=0.27.2",
    "python-dotenv>=1.0.1",
    "loguru>=0.7.2",
    "email-validator>=2.2.0",
    "slowapi>=0.1.9",
    "sqlalchemy-utils>=0.36.1",
    "aiomysql>=0.2.0",
    "aiosqlite>=0.20.0",
    "click>=8.1.7",
    "DBUtils>=3.1.0",
    "bcrypt>=4.0.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

# Install akshare only:  pip install .
# Install with web platform:  pip install ".[web]"
# Install with dev tools:  pip install ".[web,dev]"

[project.urls]
Homepage = "https://github.com/akfamily/akshare"
Documentation = "https://akshare.akfamily.xyz"
Repository = "https://github.com/akfamily/akshare"

[tool.setuptools]
packages = ["akshare"]

[tool.setuptools.package-data]
akshare = ["*.dat", "*.json", "category_mapping/*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
