[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "akshare"
version = "1.17.91"
description = "AKShare is an elegant and simple financial data interface library for Python"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AKFamily", email = "albertandking@gmail.com"}
]
maintainers = [
    {name = "cloud", email = "cloud@example.com"}
]
keywords = ["akshare", "financial data", "quantitative trading", "stock", "fund", "futures"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.3",
    "numpy>=2.1.3",
    "html5lib>=1.1",
    "jsonpath>=0.82",
    "tqdm>=4.66.0",
    "tabulate>=0.9.0",
    "scipy>=1.13.0",
    "decorator>=5.1.1",
    "mini-racer>=0.6.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.35",
    "alembic>=1.14.0",
    "pymysql>=1.1.1",
    "cryptography>=44.0.0",
    "PyJWT>=2.8.0",
    "python-multipart>=0.0.17",
    "apscheduler>=3.10.4",
    "croniter>=3.0.3",
    "httpx>=0.27.2",
    "python-dotenv>=1.0.1",
    "loguru>=0.7.2",
    "email-validator>=2.2.0",
    "slowapi>=0.1.9",
    "sqlalchemy-utils>=0.36.1",
    "aiomysql>=0.2.0",
    "aiosqlite>=0.20.0",
    "click>=8.1.7",
    "DBUtils>=3.1.0",
    "bcrypt>=4.0.0",
    "gunicorn>=22.0.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "bandit>=1.7.0",
]

# Install akshare only:  pip install .
# Install with web platform:  pip install ".[web]"
# Install with dev tools:  pip install ".[web,dev]"

[project.urls]
Homepage = "https://github.com/akfamily/akshare"
Documentation = "https://akshare.akfamily.xyz"
Repository = "https://github.com/akfamily/akshare"

[tool.setuptools]
packages = ["akshare"]

[tool.setuptools.package-data]
akshare = ["*.dat", "*.json", "category_mapping/*"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["akshare/", "alembic/versions/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "W", "SIM", "S", "PTH", "R", "TCH", "ERA", "C901"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top
    "F821",   # undefined name
    "F841",   # local variable assigned but never used
    "E721",   # type comparison
    "E722",   # bare except
    "E712",   # comparison to True/False
    "B008",   # function call in default arg - FastAPI Depends() is intentional
    "N805",   # first arg of method not 'self' - test mocks use self_inner deliberately
    "S101",   # assert used - allow in tests
    "S104",   # possible binding to all interfaces - 0.0.0.0 is intentional for Docker
    "S105",   # possible hardcoded password - config uses env vars
    "S106",   # possible hardcoded password - config uses env vars
    "S311",   # random for cryptographic purposes - JWT uses secrets
    "S608",   # SQL injection - table names validated via safe_table_name() in tables.py
    "S107",   # hardcoded password - false positive for token_type="access" in security.py
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B017", "N806", "S101", "S105", "S106", "S110"]  # S110: try/except/pass ok in test cleanup
# ANN401: dynamic types (akshare calls, APScheduler Job, generic cache) - Any intentional
"app/data_fetch/providers/akshare_provider.py" = ["ANN401"]
"app/data_fetch/scripts/*" = ["ANN401"]
"app/services/scheduler_service.py" = ["ANN401"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["akshare/", "tests/", "alembic/", "app/data_fetch/"]

[[tool.mypy.overrides]]
module = "app.*"
disallow_untyped_defs = false
check_untyped_defs = true

# Stricter typing for well-typed modules (gradual rollout)
[[tool.mypy.overrides]]
module = "app.models.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "app.api.schemas"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "app.core.config"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "app.utils.constants"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "app.utils.validators"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "app.utils.db_result"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "akshare.*"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "app.data_fetch.*"
follow_imports = "skip"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-v --tb=short --timeout=120"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["app"]
omit = ["app/__init__.py", "tests/*"]
branch = true

[tool.coverage.report]
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]
